--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "@tanstack/react-query": "^5.62.7",
+    "axios": "^1.7.9",
+    "react-intersection-observer": "^9.15.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
