--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,10 @@
 {
   "name": "Zappai Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/base:debian-12",
+  "image": "mcr.microsoft.com/devcontainers/python:3.11-bookworm",
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
       "version": "20",
       "pnpm": "8"
-    },
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.11"
     }
   },
   "workspaceFolder": "/workspaces/fantastic-umbrella",
