feat: Integrate Google Drive support for video uploads and streaming
- Enhanced Supabase client configuration to enable automatic token refresh and session persistence.
- Updated Video interface to include googleDriveFileId for identifying videos stored in Google Drive.
- Modified video URL resolution logic to support streaming from Google Drive via a proxy endpoint.
- Implemented a new API endpoint for streaming videos from Google Drive, ensuring CORS compliance.
- Added functionality to sync Google OAuth tokens after user authentication with Supabase.
- Removed obsolete mock data generation scripts and health check scripts.
- Cleaned up database migration scripts related to Google Drive integration.
- Updated various backend services to handle Google Drive file IDs and OAuth tokens.
- Improved error handling and logging for video streaming and token synchronization processes.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ playwright-data/
 browser_data/
 backend/my-ai-460612-c375c19c0b1d.json
 backend/.env
+backend/venv/
+backend/.venv/
 .kiro
 .env.local
 my-ai-460612-c375c19c0b1d (2).json
