feat: Implement multi-account cookie management and refreshing service
- Added MultiAccountCookieManager for managing multiple Google account cookies with automatic rotation and health checks.
- Introduced MultiAccountRefresher to periodically refresh cookies for accounts.
- Implemented R2StorageService for uploading videos to Cloudflare R2.
- Created TypeScript types for backend schemas and added type generation script.
- Updated package.json and tsconfig.json for TypeScript configuration and scripts.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,5 @@ google-auth-httplib2
 google-api-python-client
 # Browser automation for cookie refresh
 playwright
+# Cloudflare R2 (S3-compatible)
+boto3
