--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@zappai/types": "workspace:*",
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
